# Lantrn-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.bmad/profiles/: fast.yaml  hq.yaml
agents/: analyst.bmad.yaml  architect.bmad.yaml  dev.bmad.yaml  pm.bmad.yaml  qa.bmad.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentCard.tsx  BlueprintViewer.tsx  Layout.tsx  ProgressIndicator.tsx  StatusCard.tsx  TraceViewer.tsx  index.ts
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/pages/: Agents.tsx  Build.tsx  Home.tsx  Logs.tsx  Models.tsx  Plan.tsx  PolicyEditor.tsx  Runs.tsx  Settings.tsx  index.ts
dashboard/src/services/: api.ts  websocket.ts
dashboard/src/types/: index.ts
dashboard/src/utils/: index.ts
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  ROADMAP.md
policies/: default.yaml  org.yaml
scripts/: start.sh  stop.sh
src/lantrn_agent/: api.py  cli.py
src/lantrn_agent/agents/: __init__.py  base.py
src/lantrn_agent/core/: __init__.py  config.py  memory.py  pipeline.py
src/lantrn_agent/models/: __init__.py  llm.py
src/lantrn_agent/tools/: __init__.py  base.py  registry.py  test_runner.py
src/lantrn_agent/utils/: __init__.py
src/lantrn_agent/workspace/: __init__.py  diff_tracker.py  isolation.py  manager.py  manifest.py
tests/: conftest.py  test_agents.py  test_config.py  test_llm.py  test_memory.py  test_pipeline.py  test_tools.py  test_workspace.py
